--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
-    <title>{% block title %}Aetherwave{% endblock %}</title>
+    <title>{% block title %}aetherwave.rm{% endblock %}</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -74,11 +74,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>Aetherwave</h5>
+                    <h5>aetherwave</h5>
                     <p>Audio synthesis and waveform manipulation platform.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; {% now "Y" %} Aetherwave. All rights reserved.</p>
+                    <p>&copy; {% now "Y" %} aetherwave.rm. All rights reserved.</p>
                 </div>
             </div>
         </div>
