--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 body {
@@ -65,7 +65,10 @@ button:focus-visible {
   }
   a:hover {
     color: #747bff;
+    box-shadow: 0 4px 12px rgba(0, 160, 255, 0.6);
+  
   }
+
   button {
     background-color: #f9f9f9;
   }
@@ -90,4 +93,9 @@ svg {
     -webkit-user-drag: none;
     -moz-user-select: none;
     -ms-user-select: none;
+}
+
+a:hover {
+    text-shadow: 3px 20px 10px rgba(255, 255, 255, 0.3);
+    transform: translateY(-2px);
 }
