add: login create user page, ditched modal for simplicity
the modal was too much of a headache for my first react project so I decided to just feed the views page and create a simple API call to check the database for the user and display a short message 'welcome, user'.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,17 @@
 {% load static %}
 
-{% include "account/login.html" %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="{% static 'assets/index-DRBGTKLl.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/index-B6QuAgtY.css' %}">
 </head>
 <body>
-    <div id="root"></div>
-    <script type="module" src="{% static 'assets/index-BiiXkJYO.js' %}"></script>
+    <div id="root">
+        <div id="auth-modal" style="display: none;">
+            {% include "account/login.html" %}
+        </div>
+    </div>
+    <script type="module" src="{% static 'assets/index-FJ3qDEm1.js' %}"></script>
 </body>
 </html>
