--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,8 @@ a {
 }
 a:hover {
   color: #ffffff;
+  text-shadow: 3px 20px 10px rgba(255, 255, 255, 0.3);
+  transform: translateY(-2px);
 }
 
 body {
@@ -40,18 +42,22 @@ body {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    width: max-content;
+    height: max-content;
+    align-self: center; 
+    border: 1px solid white;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: transparent;
+    cursor: pointer;
+    transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: white;
+  text-shadow: 3px 20px 10px rgba(255, 255, 255, 0.3);
+  transform: translateY(-2px);
 }
 button:focus,
 button:focus-visible {
@@ -69,9 +75,7 @@ button:focus-visible {
   
   }
 
-  button {
-    background-color: #f9f9f9;
-  }
+ 
 }
 
 .text-glow {
@@ -96,6 +100,6 @@ svg {
 }
 
 a:hover {
-    text-shadow: 3px 20px 10px rgba(255, 255, 255, 0.3);
-    transform: translateY(-2px);
+    
 }
+
