add: edit and delete function with checks and disabled when not used
CRU functions dynamically change depending on login state and state of presets in database. This ensures less potential for errors or corruptions in the backend by ensuring a robust front end

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,7 +54,7 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
 }
-button:hover {
+button:hover:not(:disabled) {
   border-color: white;
   text-shadow: 3px 20px 10px rgba(255, 255, 255, 0.3);
   transform: translateY(-2px);
