--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="{% static 'assets/index-B6QuAgtY.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/index-CGeTpZYA.css' %}">
 </head>
 <body>
     <div id="root">
         
     </div>
-    <script type="module" src="{% static 'assets/index-FJ3qDEm1.js' %}"></script>
+    <script type="module" src="{% static 'assets/index-YGPBf36Y.js' %}"></script>
 </body>
 </html>
