--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,6 @@
     <div id="root">
         
     </div>
-    <script type="module" src="{% static 'assets/index-YGPBf36Y.js' %}"></script>
+    <script type="module" src="{% static 'assets/index-N_57lYHj.js' %}"></script>
 </body>
 </html>
