--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,6 @@
     <div id="root">
         
     </div>
-    <script type="module" src="{% static 'assets/index-BXe6RlWV.js' %}"></script>
+    <script type="module" src="{% static 'assets/index-Db_DUjf9.js' %}"></script>
 </body>
 </html>
