--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'assets/index-7m4MFbtk.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/index-UV8iK1uK.css' %}">
 </head>
 <body>
     <div id="root">
         
     </div>
-    <script type="module" src="{% static 'assets/index-Db_DUjf9.js' %}"></script>
+    <script type="module" src="{% static 'assets/index-CU9JlKKx.js' %}"></script>
 </body>
 </html>
