add logo svg, cleaned navlinks to fade and unclickable, polished look

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -26,8 +26,8 @@
             {% element fields form=form %}{% endelement %}
             {{ redirect_field }}
             <button type="submit"
-                    class="bg-brandBlue w-full rounded py-2 text-white transition hover:bg-brandOrange">
-                {% trans "Reset My Password" %}
+                    class="bg-brandBlue w-full rounded py-2 text-white transition hover:bg-brandOrange" disabled>
+                {% trans "Reset My Password (future scope)" %}
             </button>
         </form>
 
