--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/index-UV8iK1uK.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/index-jBNZEaQd.css' %}">
+    <title>aetherwave.rm</title>
+    <link rel="icon" type="image/svg+xml" href="{% static 'assets/logo.svg' %}" />
 </head>
 <body class="flex min-h-screen flex-col">
 
@@ -17,7 +19,7 @@
 
         <div id="root"></div>
 
-        <script type="module" src="{% static 'assets/index-CUKF4_Zr.js' %}"></script>
+        <script type="module" src="{% static 'assets/index-DOS8BG-4.js' %}"></script>
         {% block extra_scripts %}{% endblock %}
 </body>
 </html>
