--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/index-jBNZEaQd.css' %}">
     <title>aetherwave.rm</title>
-    <link rel="icon" type="image/svg+xml" href="{% static 'assets/logo.svg' %}"/>
+    <link rel="icon" type="image/svg+xml" href="{% static 'assets/wave-divider.svg' %}" />
 </head>
 <body class="flex min-h-screen flex-col">
 
@@ -19,7 +19,7 @@
 
         <div id="root"></div>
 
-        <script type="module" src="{% static 'assets/index-DOS8BG-4.js' %}"></script>
+        <script type="module" src="{% static 'assets/index-CLa5kF_d.js' %}"></script>
         {% block extra_scripts %}{% endblock %}
 </body>
 </html>
