--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/index-DwSBj_Ii.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/index-BwXAo4RR.css' %}">
     <title>aetherwave.rm</title>
-    <link rel="icon" type="image/svg+xml" href="{% static 'assets/wave-divider.svg' %}" />
+    <link rel="icon" type="image/svg+xml" href="{% static 'assets/aetherwave-divider-saw.png' %}" />
 </head>
 <body class="flex min-h-screen flex-col">
 
@@ -19,7 +19,7 @@
 
         <div id="root"></div>
 
-        <script type="module" src="{% static 'assets/index-DyeEQp3o.js' %}"></script>
+        <script type="module" src="{% static 'assets/index-CQmWpYAe.js' %}"></script>
         {% block extra_scripts %}{% endblock %}
 </body>
 </html>
